--- a/src/express/templates/offers/offer.pug
+++ b/src/express/templates/offers/offer.pug
@@ -57,7 +57,14 @@ block content
       .ticket__comments
         h2.ticket__subtitle Комментарии
         .ticket__comment-form
-          form.form.comment-form(action='#' method='post')
+          form.form.comment-form(
+              action=`/offers/${id}/comments`
+              method='post'
+              enctype='application/x-www-form-urlencoded'
+              autocomplete='off'
+            )
+            input(type='hidden' name='_csrf' value=csrfToken)
+
             .comment-form__header
               a.comment-form__avatar.avatar(href='#')
                 img(src='img/avatar.jpg' srcset='img/avatar@2x.jpg 2x' alt='Аватар пользователя')
