--- a/src/express/templates/main/login.pug
+++ b/src/express/templates/main/login.pug
@@ -8,6 +8,7 @@ block content
           a.login__link(href='register') Регистрация
           h2 Вход
 
+        input(type='hidden' name='_csrf' value=csrfToken)
         .form__field.login__field
           input#email.js-field(type='email' name='email' required)
           label(for='email') Эл. почта
