--- a/src/express/templates/main/register.pug
+++ b/src/express/templates/main/register.pug
@@ -7,6 +7,8 @@ block content
         .sign-up__title
           h2 Регистрация
           a.sign-up__link(href='login') Вход
+
+        input(type='hidden' name='_csrf' value=csrfToken)
         .sign-up__avatar-container.js-preview-container
           .sign-up__avatar.js-preview
           .sign-up__field-avatar
